# ticketeer

./: .gitignore  README.md  pyproject.toml
data/: KNOWLEDGE_BASE.md  TICKETS.md
data/md/: knowledge_base.json  knowledge_base_old.json
data/md/faq/: access-permissions-faq.md  account-management-faq.md  hardware-faq.md  remote-work-faq.md  security-awareness-faq.md  software-issues-faq.md
data/md/policy/: approved-software-list.md  data-classification-policy.md  hardware-standards.md  mfa-policy.md  offboarding-it-checklist.md  onboarding-it-checklist.md
data/md/runbooks/: access-provisioning-runbook.md  hardware-replacement-runbook.md  network-outage-runbook.md  password-reset-runbook.md  security-incident-response-runbook.md  vpn-troubleshooting-runbook.md
data/sqlite/: tickets.db
scripts/ticket_generation/: __main__.py  constants.py  db.py  metadata.py  text.py
src/ticketeer/: __main__.py  settings.py
src/ticketeer/agent/: base.py  guardrails.py  it_support.py  openai.py  prompts.py  prompts.yaml
src/ticketeer/agent/tools/: base.py  knowledge_base_tool.py  sql_tools.py
src/ticketeer/knowledge_base/: chunking.py  embedding.py  service.py  vector_store.py
src/ticketeer/tickets/: base.py  sql_database.py
tests/: conftest.py
tests/knowledge_base/: test_chunking.py  test_vector_store.py
