[project]
name = "ticketeer"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "openai>=1.0",
    "numpy>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
ticketeer = "ticketeer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true


[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.poe.tasks]
start = "python -m ticketeer"
fmt = "ruff format src/ tests/"
lint = "ruff check src/ tests/"
type-check = "ty check"
test = "python -m pytest"

[tool.poe.tasks.check]
sequence = ["fmt", "lint", "type-check"]

[tool.poe.tasks.generate-data]
shell = """
cd scripts/
python -m ticket_generation --count 200
"""

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "D203",
    "D205",
    "D213",
    "ANN401",
    "COM812",
    "T201"
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG", "SLF001"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
include = ["src"]
